# Lidar

./: PIDLIDAR.ino
Lidar_n/: CMakeLists.txt
Lidar_n/LidarCommonTypes/: tote_pose.h
Lidar_n/LidarDataCommunication/inc/: constants.h  roborio_connection.h
Lidar_n/LidarDataCommunication/src/: CMakeLists.txt  roborio_connection.cpp
Lidar_n/LidarDataProcessor/inc/: constants.h  coordinate_conversion.h  lidar_data_processor.h  line_properties.h  point_cloud_conversion.h
Lidar_n/LidarDataProcessor/src/: CMakeLists.txt  coordinate_conversion.cpp  lidar_data_processor.cpp  line_properties.cpp  point_cloud_conversion.cpp
Lidar_n/LidarMain/src/: CMakeLists.txt  lidar.cpp  lidar.cpp.old
Lidar_n/LidarSerialDataCollector/: CMakeLists.txt
Lidar_n/LidarSerialDataCollector/inc/: constants.h  lidar_serial_data_collector.h  lidar_serial_packet.h
Lidar_n/LidarSerialDataCollector/src/: CMakeLists.txt  lidar_serial_data_collector.cpp
